<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/finch_content_padding_extra_large"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finch_url"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:id="@+id/finch_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                tools:text="https://example.com/path/to/resource?here=might_be_really_long" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finch_method"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:id="@+id/finch_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                tools:text="GET" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finch_protocol"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:id="@+id/finch_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                tools:text="HTTP/1.1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finch_status"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:id="@+id/finch_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                tools:text="Complete" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finch_response"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:id="@+id/finch_response"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                tools:text="200 OK" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finch_ssl"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:id="@+id/finch_ssl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                tools:text="Yes" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/finch_content_padding_medium">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finch_request_time"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:id="@+id/finch_request_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                tools:text="05/02/17 11:52:49" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="4dp"
                android:text="@string/finch_response_time"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:id="@+id/finch_response_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                tools:text="05/02/17 11:52:49" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finch_duration"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:id="@+id/finch_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                tools:text="405 ms" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/finch_content_padding_medium">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finch_request_size"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:id="@+id/finch_request_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                tools:text="53 KB" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finch_response_size"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:id="@+id/finch_response_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                tools:text="148 KB" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finch_total_size"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:id="@+id/finch_total_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                tools:text="201 KB" />

        </TableRow>

    </TableLayout>

</ScrollView>
